new CoffeeCompass first commit
new CoffeeCompass commit